--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,13 +23,13 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/material_button"
+                android:id="@+id/mvp_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="@string/button_room"
+                android:text="@string/button_mvp"
                 android:textColor="@color/white"
                 android:textSize="21sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,22 @@
                 android:textSize="21sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/material_button" />
+                app:layout_constraintTop_toBottomOf="@+id/mvp_button" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/room_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/button_room"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/mvvm_button" />
+
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/livedata_button"
@@ -62,7 +77,7 @@
                 android:textSize="21sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mvvm_button" />
+                app:layout_constraintTop_toBottomOf="@+id/room_button" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/lifecycledata_button"
