--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -80,6 +80,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/network_libs_button" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/other_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/button_other"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/coroutin_button" />
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/motion_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -91,49 +105,8 @@
                 android:textSize="21sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/coroutin_button" />
+                app:layout_constraintTop_toBottomOf="@+id/other_button" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/location_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="@string/button_location"
-                android:textColor="@color/white"
-                android:textSize="21sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/motion_button" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/app_update_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="@string/button_app_updates"
-                android:textColor="@color/white"
-                android:textSize="21sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/location_button" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/rxjava_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:padding="10dp"
-                android:text="@string/button_rxjava_demo"
-                android:textColor="@color/white"
-                android:textSize="21sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/app_update_button" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
