--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -38,6 +38,20 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/behavior_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/button_behaviour"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/architecture_button" />
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/android_pattern_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -49,7 +63,7 @@
                 android:textSize="21sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/architecture_button" />
+                app:layout_constraintTop_toBottomOf="@+id/behavior_button" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/network_libs_button"
