- Working on cameraX

--- a/app/src/main/res/layout/activity_behaviour.xml
+++ b/app/src/main/res/layout/activity_behaviour.xml
@@ -58,6 +58,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/download_img_button" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_camerax"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/button_camerax"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_download_song" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
