- Added shimmer effect demo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -173,6 +173,11 @@
     <color name="redcolor">#D0021B</color>
     <color name="transparent">#00000000</color>
 
+    <color name="placeholder_bg">#dddddd</color>
+    <color name="item_name">#0c0c0c</color>
+    <color name="description">#1a1a1a</color>
+    <color name="chef">#777</color>
+    <color name="timestamp">#777</color>
 
     <color name="buttonLabel">#d3d3d3</color>
 </resources>
