--- a/app/src/main/res/layout/activity_auto_textview.xml
+++ b/app/src/main/res/layout/activity_auto_textview.xml
@@ -77,4 +77,20 @@
             android:textColor="@android:color/white"
             app:autoSizeTextType="uniform" />
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bounceButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:padding="10dp"
+        android:paddingStart="@dimen/padding"
+        android:paddingEnd="@dimen/padding"
+        android:text="Bounce"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="21sp" />
 </LinearLayout>
