--- a/app/src/main/res/layout/activity_auto_textview.xml
+++ b/app/src/main/res/layout/activity_auto_textview.xml
@@ -92,7 +92,23 @@
         android:padding="10dp"
         android:paddingStart="@dimen/padding"
         android:paddingEnd="@dimen/padding"
-        android:text="Bounce"
+        android:text="Report SOS"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="21sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bounceButton2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:padding="10dp"
+        android:paddingStart="@dimen/padding"
+        android:paddingEnd="@dimen/padding"
+        android:text="Manish\nReady for work?"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="21sp" />
