- Added stateAnimator to button

--- a/app/src/main/res/layout/activity_auto_textview.xml
+++ b/app/src/main/res/layout/activity_auto_textview.xml
@@ -91,6 +91,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:paddingStart="@dimen/padding"
+        android:stateListAnimator="@xml/animate_scale"
         android:paddingEnd="@dimen/padding"
         android:text="Report SOS"
         android:textAlignment="center"
