--- a/app/src/main/res/animator/animate_s2.xml
+++ b/app/src/main/res/animator/animate_s2.xml
@@ -1,14 +1,15 @@
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:ordering="together">
+<?xml version="1.0" encoding="utf-8"?>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+
     <objectAnimator
         android:duration="1000"
         android:propertyName="scaleX"
-        android:valueTo="0.9"
+        android:valueTo="1"
         android:valueType="floatType" />
     <objectAnimator
         android:duration="1000"
         android:propertyName="scaleY"
-        android:valueTo="0.9"
+        android:valueTo="1"
         android:valueType="floatType" />
-</set>
 
+</set>
