--- a/app/src/main/res/layout/activity_auto_textview.xml
+++ b/app/src/main/res/layout/activity_auto_textview.xml
@@ -82,6 +82,23 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/bounceButton3"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:padding="10dp"
+        android:paddingStart="@dimen/padding"
+        android:stateListAnimator="@xml/animate_scale"
+        android:paddingEnd="@dimen/padding"
+        android:text="Report SOS"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="21sp" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/bounceButton"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
