- Custom spannable string with click worked well

--- a/app/src/main/res/xml/motion_scene_1.xml
+++ b/app/src/main/res/xml/motion_scene_1.xml
@@ -5,6 +5,6 @@
         motion:duration="1000">
         <OnClick
             motion:clickAction="toggle"
-            motion:target="@+id/imageView" />
+            motion:motionTarget="@+id/imageView" />
     </Transition>
 </MotionScene>
