--- a/app/src/main/res/xml/motion_scene_3.xml
+++ b/app/src/main/res/xml/motion_scene_3.xml
@@ -6,7 +6,7 @@
         motion:duration="1000">
         <OnClick
             motion:clickAction="toggle"
-            motion:target="@+id/view" />
+            motion:motionTarget="@+id/view" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
