--- a/app/src/main/res/layout/activity_other_things.xml
+++ b/app/src/main/res/layout/activity_other_things.xml
@@ -23,6 +23,7 @@
         android:fillViewport="true"
         android:fitsSystemWindows="true"
         app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
