- Added new animation library

--- a/app/src/main/res/layout/activity_my_test_demo.xml
+++ b/app/src/main/res/layout/activity_my_test_demo.xml
@@ -41,7 +41,6 @@
 
     </HorizontalScrollView>
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_dialog"
         android:layout_width="200dp"
@@ -55,6 +54,22 @@
         android:stateListAnimator="@xml/animate_scale"
         android:paddingEnd="@dimen/padding"
         android:text="Open Dialog"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="21sp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_report_sos"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:padding="10dp"
+        android:paddingStart="@dimen/padding"
+        android:paddingEnd="@dimen/padding"
+        android:text="Report SOS"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="21sp" />
