--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,9 @@
     <dimen name="padding">16dp</dimen>
     <dimen name="line_spacing_multiplier">1.2</dimen>
 
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="activity_padding">16dp</dimen>
     <dimen name="placeholder_image">50dp</dimen>
     <dimen name="placeholder_text_height">8dp</dimen>
@@ -21,4 +24,7 @@
     <dimen name="description">15dp</dimen>
     <dimen name="price">13dp</dimen>
 
+    <dimen name="controls_margin">16dp</dimen>
+    <dimen name="controls_margin_large">32dp</dimen>
+    <dimen name="button_size">92dp</dimen>
 </resources>
