- Added some code for testing

--- a/app/src/main/res/layout/activity_my_test_demo.xml
+++ b/app/src/main/res/layout/activity_my_test_demo.xml
@@ -18,6 +18,7 @@
         android:layout_height="100dp"
         android:background="@color/notification_command"
         android:fillViewport="true"
+        android:visibility="invisible"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
         android:scrollbars="none">
