--- a/app/src/main/res/layout/activity_other_things.xml
+++ b/app/src/main/res/layout/activity_other_things.xml
@@ -173,6 +173,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/my_test_button" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/so_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/button_so"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bounce_button" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
